[gd_scene load_steps=4 format=3 uid="uid://cj2ic13okdggj"]

[ext_resource type="Script" path="res://Scripts/FailBar.gd" id="1_565kp"]
[ext_resource type="FontFile" uid="uid://cschdtyve5f6c" path="res://Assets/Fonts/CutePixel.ttf" id="1_h38ae"]
[ext_resource type="Texture2D" uid="uid://i57mq3iewf4b" path="res://Assets/Sprites/xbutton.png" id="1_v5v5a"]

[node name="FailBar" type="Node2D"]
script = ExtResource("1_565kp")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 200.0
offset_bottom = 90.0

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h38ae")
text = "FAIL COUNTER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[node name="Fail0" type="TextureRect" parent="TextureRect/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("1_v5v5a")

[node name="Fail1" type="TextureRect" parent="TextureRect/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("1_v5v5a")

[node name="Fail2" type="TextureRect" parent="TextureRect/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("1_v5v5a")
